--- a/scripts/test_login.yml
+++ b/scripts/test_login.yml
@@ -10,32 +10,38 @@ test_data:
     password: reader
 ---
 - comment: visit base url
+  provider: selenium
   type: get
   url: "$base_url"
 - comment: click on login link
   locator:
     type: id
     value: personaltools-login
+  provider: selenium
   type: clickElement
 - comment: provide a username
   locator:
     type: id
     value: __ac_name
   text: "$username"
+  provider: selenium
   type: setElementText
 - comment: provide a password
   locator:
     type: id
     value: __ac_password
   text: "$password"
+  provider: selenium
   type: setElementText
 - comment: click on login submit button
   locator:
     type: css
     value: ".pattern-modal-buttons > input[name=submit]"
+  provider: selenium
   type: clickElement
 - comment: wait for page loaded
   locator:
     type: css
     value: ".icon-user"
+  provider: selenium
   type: waitForElementVisible
